{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "96ae7da1-9a3d-4898-8445-7c4bb2511bab",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "730bb9d5-4cbe-4ab3-9767-d9e38a5a4864",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LookLeft",
                    "type": "Button",
                    "id": "010324e8-bd14-4e77-b8b2-c5e175cc608a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LookRight",
                    "type": "Button",
                    "id": "aac6d37c-e445-4009-ab59-cc8da694eb66",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d6b63339-02bd-4d6a-9e60-1854fe76fe61",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "LookLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80c1ffd7-bd19-4655-935a-8dd1346c43d5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "LookRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4090985-0bcd-479f-a967-027c6c205817",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Player",
            "bindingGroup": "Player",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}